--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "next": "14.1.4",
     "openai": "^4.46.0",
+    "postcss": "^8.4.41",
     "react": "^18",
     "react-dom": "^18",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
     "@types/node": "20.12.7",
